fix css to align text correctly

--- a/psd2html/e3/main.css
+++ b/psd2html/e3/main.css
@@ -22,6 +22,10 @@ div p{
 	background-size: 100% 100%;
 	padding-top: 30px;
 }
+#hero{
+	width: 1200px;
+	margin-left: 40px
+}
 #caption{
 	display:block;
 	margin-left: auto;
